# orderbook-grpc

./: Cargo.toml  build.rs
src/: aggregate.rs  binance.rs  bitstamp.rs  deserialize_helper.rs  exchange.rs  grpc.rs  main.rs  order_book.rs
test/: binance_book.json  bitstamp_book.json
